crates/rattler_lock/src/snapshots/rattler_lock__test__v7__pixi-build-git-tag-source-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
platforms:
  - name: linux-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      linux-64:
        - conda_source: "pixi-tag-package[8a76ea86] @ pixi-tag-package"
packages:
  - conda_source: "pixi-tag-package[8a76ea86] @ pixi-tag-package"
    version: 1.2.0
    build: pyhbf21a9e_0
    subdir: noarch
    source:
      git: "https://github.com/example/pixi-package.git"
      tag: v1.2.0
      rev: def456789012345
