crates/rattler_lock/src/snapshots/rattler_lock__test__v7__pixi-build-pinned-source-lock.yml.snap
---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
platforms:
  - name: linux-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      linux-64:
        - conda_source: "pixi-build-package[b8881f54] @ pixi-build-package"
packages:
  - conda_source: "pixi-build-package[b8881f54] @ pixi-build-package"
    version: 1.0.0
    build: pyhbf21a9e_0
    subdir: noarch
    timestamp: 0
    source:
      git: "https://github.com/example/pixi-package.git"
      branch: main
      rev: abcdef123456789
